Commit Content Provider

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchActivity"></activity>
+        <provider
+            android:name=".MyContentProvider"
+            android:authorities="com.example.sqlite_demo_2"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.example.sqlite_demo_2.READ_DATABASE"
+            android:writePermission="com.example.sqlite_demo_2.WRITE_DATABASE"/>
+
+        <activity android:name=".SearchActivity" />
         <activity android:name=".AuthorActivity" />
         <activity android:name=".BookActivity" />
         <activity android:name=".MainActivity">
@@ -20,5 +28,12 @@
             </intent-filter>
         </activity>
     </application>
+    <permission android:name="com.example.sqlite_demo_2.WRITE_DATABASE"
+        android:label="Write Database"
+        android:protectionLevel="normal"/>
+
+    <permission android:name="com.example.sqlite_demo_2.READ_DATABASE"
+        android:label="Read Database"
+        android:protectionLevel="normal"/>
 
 </manifest>
